--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   right: 0;
   margin: auto;
   display: grid;
+  gap: 0.2em;
   grid-template-columns: repeat(4, 1fr);
   max-width: 350px;
   max-height: 300px;
