Apply required changes

--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,11 @@
   display: grid;
   gap: 0.2em;
   grid-template-columns: repeat(4, 1fr);
-  max-width: 350px;
-  max-height: 300px;
+  max-width: 50vw;
+  min-width: 40vw;
+  max-height: 400px;
+  margin: auto 28px;
+  left: calc(90vw - 40vw);
 }
 
 .result {
@@ -24,11 +27,13 @@
   background-color: rgb(165, 165, 165);
   color: white;
   text-align: right;
+  font-size: 1.5em;
 }
 
 .key,
 .number {
   font-weight: bold;
+  font-size: 1.0em;
 }
 
 .number[value='0'] {
@@ -52,9 +57,10 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  left: -20vw;
+  left: 0;
   right: 0;
-  margin: auto;
-  max-width: 50vw;
-  max-height: 300px;
+  margin: auto 28px;
+  max-width: 30vw;
+  min-width: 20vw;
+  max-height: 400px;
 }
